infrastructure/deploiement-vault/overlays/staging/patch-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: vault
spec:
  template:
    spec:
      containers:
        - name: vault
          resources:
            requests:
              cpu: 150m
              memory: 384Mi
            limits:
              cpu: 600m
              memory: 1Gi
