infrastructure/deploiement-vault/overlays/staging/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - vault.staging.example.com
      secretName: vault-staging-tls
  rules:
    - host: vault.staging.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault
                port:
                  number: 8200
